fix(Package-create): Create package spacing issue and color change

--- a/member/client/app/app.scss
+++ b/member/client/app/app.scss
@@ -1112,3 +1112,7 @@ li.dndPlaceholder {
 .no-margin-top{
   margin-top:0px;
 }
+
+.ship-create-sidebar {
+  padding: 10px 15px;
+}
